# ucrypt

./: .gitignore  CMakeLists.txt  README.md  main.c
include/ucrypt/: integer.h  pbkdf2.h  prime.h  rsa.h  sha.h  string_util.h  ucdef.h
src/: CMakeLists.txt  integer.c  integer.h  pbkdf2.c  prime.c  prime.h  rand.c  rand.h  rsa.c  sha.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c  sha_hmac.c  string_util.c  string_util.h  ucalloc.h
test/: CMakeLists.txt  test.c
tests/: CMakeLists.txt  test.c  testcase.c
tests/data/: mul.csv
tests/datagen/: dataclear.sh  datagen.sh  divdata.py  expmoddata.py  muldata.py
tests/hashing/: hmac.c  pbkdf2.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c
tests/include/uctest/: hashtests.h  inttests.h  minunit.h  testcase.h  testdata.h.in
tests/integer/: div.c  expmod.c  mul.c  sqr.c
